--- a/css/theme.css
+++ b/css/theme.css
@@ -1046,6 +1046,7 @@ nav.navbar.nav-grey {
 	}
 	.navbar-brand img {
 		max-height: 100%;
+		padding: 0.5rem;
 	}
 	.navbar-toggle {
 		display: block;
@@ -1400,6 +1401,7 @@ nav.navbar.nav-grey {
 	.navbar-default.transparent.nav-small .logo-dark,
 	.navbar-default.transparent .logo-light {
 		opacity: 1;
+		padding: 1rem;
 	}
 	nav.navbar.transparent li.nav-separator {
 		border-left: 1px solid rgba(255,255,255,0.1);
