--- a/css/colors/blue.css
+++ b/css/colors/blue.css
@@ -1,5 +1,5 @@
 a:focus,
-a:hover, 
+a:hover,
 .color,
 .connected-icon a i,
 .testimonial-name,
@@ -13,7 +13,7 @@ a:hover,
 .box a,
 .box.box-style6 a,
 .box.box-style8b a,
-.about-me-social li a:hover,    
+.about-me-social li a:hover,
 .icon-box-hover i,
 #footer-2 li a:hover,
 #footer-2>a:hover,
@@ -23,9 +23,9 @@ a:hover,
 .home-filters-dark .cbp-filter-item:hover,
 .home-filters-dark .cbp-filter-item-active.cbp-filter-item
 {
-    color: #0cb4ce
+    color: #DC143C
 }
- 
+
 
 .bg-color,
 #price-list .button:hover,
@@ -33,36 +33,36 @@ a:hover,
 .progress-bar,
 #back-to-top,
 .portfolioFilter a.current,
-.portfolioFilter a:hover,  
+.portfolioFilter a:hover,
 .label-primary,
 .panel-title,
 #buttonTabs li.active a,
 .box-style5,
 .box-style7,
 .box-style10,
-.progress-bars-4 .progress-bar-tooltip, 
+.progress-bars-4 .progress-bar-tooltip,
 .timeline::before,
 h4.fitness-label,
 .bg-overlay:after,
 .label-items-in-cart
 {
-    background-color: #0cb4ce
+    background-color: #DC143C
 }
-.btn-primary,  
-.btn-primary.active, .btn-primary:active, 
+.btn-primary,
+.btn-primary.active, .btn-primary:active,
 .open>.dropdown-toggle.btn-primary,
 .btn-primary.disabled, .btn-primary.disabled.active, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled:focus, .btn-primary.disabled:hover, .btn-primary[disabled], .btn-primary[disabled].active, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled]:focus, .btn-primary[disabled]:hover, fieldset[disabled] .btn-primary, .btn-ghost-color:hover,
 .btn-primary.btn-appear:hover
 {
-    background-color: #0cb4ce
+    background-color: #DC143C
 }
-.btn-primary, 
+.btn-primary,
 .btn-ghost-color,
 .btn-ghost-color:hover,
 .section-heading hr, hr.separator,
 .btn-primary.btn-appear:hover
-{ 
-    border-color: #0cb4ce
+{
+    border-color: #DC143C
 }
 .accordian-style2 .panel-title,
 .food-tabs li.active a,
@@ -72,30 +72,30 @@ h4.fitness-label,
 .timeline-bullet,
 .contact input:focus, textarea:focus, select:focus,
 .btn-primary.active, .btn-primary:active
-{ 
-    border-color: #0cb4ce
+{
+    border-color: #DC143C
 }
 #video .play-btn:after,
 .music-bottom .play-btn:after,
 .play-bottom .play-btn:after
-{ 
-    border-left-color: #0cb4ce
-} 
+{
+    border-left-color: #DC143C
+}
 .box-style4 {
-    border-top: 2px solid #0cb4ce
+    border-top: 2px solid #DC143C
 }
 #price-list .featured .price-table,
 .progress-bars-4 .progress-bar-tooltip:after
 {
-    border-top-color: #0cb4ce
+    border-top-color: #DC143C
 }
- 
+
 
 .color,
 .feature-center.white i.color,
 .counter h1,
 .team figure figcaption a:hover,
-.portfolio figure figcaption p, 
+.portfolio figure figcaption p,
 a:hover .subheading,
 .blog-columns .blog-thumb-desc a:hover h4,
 .blog-standard a:hover h4,
@@ -107,30 +107,30 @@ a:hover .subheading,
 .read-more-link2.color span,
 #clock .digit
 {
-    color: #0cb4ce
+    color: #DC143C
 }
 
 .contact input.submit,
-.blog-pagination>.active>a, 
+.blog-pagination>.active>a,
 .blog-pagination>.active>a:hover
 {
-    background-color: #0cb4ce
+    background-color: #DC143C
 }
 
 .price-table-featured .price-box
 {
-    border-color: #0cb4ce
+    border-color: #DC143C
 }
 
 blockquote {
-    border-left-color: #0cb4ce
+    border-left-color: #DC143C
 }
 
 .cbp-caption-zoom .cbp-caption-activeWrap {
     background-color: rgba(12,180,206,0.9)
 }
 
- 
+
 .progress-svg circle {
-  	stroke: #0cb4ce
+  	stroke: #DC143C
 }
