--- a/css/theme.css
+++ b/css/theme.css
@@ -3619,7 +3619,7 @@ ul {
 }
 .testimonials a,
 .testimonials p {
-	font-size: 13px;
+	font-size: 18px;
 	font-weight: 300;
 	line-height: 2;
 	display: inline-block;
@@ -5475,9 +5475,8 @@ section {
 /*---- Home Event ----*/
 .event-speakers {text-align: center}
 .event-speakers h4 {
-	font-family: "AppleGothic", sans-serif;
-	font-weight: bold;
-	font-size: 22px;
+	font-family: "lovelo", sans-serif;
+	font-size: 20px;
 	margin-top: 20px;
 	margin-bottom: 0;
 }
