--- a/css/theme.css
+++ b/css/theme.css
@@ -1378,7 +1378,7 @@ nav.navbar.nav-grey {
 	.navbar-default.transparent.nav-small .navbar-nav>li>a {
 		color: #191a1c;
 		font-size: 15px;
-		font-weight: normal;
+		font-weight: bold;
 		letter-spacing: 1px;
 	}
 	.navbar-default.transparent.nav-small .navbar-nav>li>a:hover {
