--- a/css/theme.css
+++ b/css/theme.css
@@ -5626,3 +5626,5 @@ section {
 .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 .tg .tg-uqo3{background-color:#efefef;text-align:center;vertical-align:top}
 .tg .tg-baqh{text-align:center;vertical-align:top}
+
+.panel-title {font-weight:bold;}
